Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
4.8.4, 4.8.x
-
None
-
146658a10f290603470b800d71b778239e764312 c0688f4117304b4828796aa9489ca2c0d50c9886
Description
QBoxLayout::insertLayout() calls addChildLayout(), which may fail if the child layout already has other parent, but insertLayout() continues inserting the layout into its private item list nonetheless.
Instead, insertLayout() should also fail if addChildLayout() fails. Alternatively, layout re-parenting should be implemented (see QTBUG-24420).
Attachments
Issue Links
- relates to
-
QTBUG-24420 addLayout() should reparent the added layout
-
- Open
-
For Gerrit Dashboard: QTBUG-30758 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
54560,3 | Fixed QLayout::addChildLayout(QLayout *l) when l had a parent | stable | qt/qtbase | Status: MERGED | +2 | 0 |
54605,2 | Fixed QLayout::addChildLayout(QLayout *l) when l had a parent | 4.8 | qt/qt | Status: MERGED | +2 | 0 |