Fixed QLayout::addChildLayout(QLayout *l) when l had a parent

Previously if l had a parent, addChildLayout would warn and skip the
reparenting, but it would still add the sub layout to the layout.
This caused some inconsistencies in the hierarchy which in worst case
could cause crashes.

Task-number: QTBUG-30758
(cherry-picked from qtbase commit 146658a10f290603470b800d71b778239e764312)
Change-Id: Iee6ace3189620395d7670007a23783823ed616b9
Reviewed-by: Paul Olav Tvete <paul.tvete@digia.com>